refactor: merge btrace-instr into btrace-agent
Consolidate the ASM-based bytecode instrumentation library into the
agent module. btrace-instr existed only to be consumed by btrace-agent,
and every other consumer already had agent on its classpath transitively,
so the split added no isolation value.

Source, tests, resources and build configuration are merged into
btrace-agent. Test compilation continues to use the JDK 8 javac (sun.misc.Unsafe.defineClass
is still required by InstrumentorTestBase), and three Java 11-only
Files.writeString calls in AgentManifestLibsTest were rewritten with
Files.write(..., bytes) for Java 8 compatibility. Tools.jar is now wired
as compileOnly so PerfReaderImpl compiles against sun.jvmstat.monitor.
under the JDK 8 toolchain (replacing the previous --add-exports approach
that only worked on JDK 11+).

btrace-compiler, btrace-client, btrace-bootstrap, integration-tests,
btrace-dist and the runtime-benchmarks gradle plugin are repointed at
btrace-agent. PermissionScanner drops its now-redundant /btrace-instr
path heuristic.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>